@@ -3,6 +3,8 @@ jsoup changelog
  * Relaxed parse rules of H1 - H6, to allow nested content. This is against spec, but matches browser and publisher
    behaviour.
 
+ * Relaxed parse rule of SPAN to treat as block, to allow nested block content.
+
 *** Release 1.3.3 [PENDING]
  * Implement Elements.empty() and Elements.remove(). This allows easy element removal, like:
     doc.select("iframe").remove();
